--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Raleway:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 /* Root Styles */
 :root {
+  /* colors */
   /* Primary Colors */
   --login-navy-blue: hsla(210, 100%, 20%, 1);
   --font-dark-blue: hsla(207, 43%, 16%, 1);
@@ -11,6 +14,12 @@
   --black: hsla(0, 0%, 0%, 1);
   --white: hsla(0, 0%, 100%, 1);
   --light-ash-bg-search: hsla(0, 0%, 95%, 1);
+
+  /* Font Families */
+  --lato: 'Lato', sans-serif;
+  --open-sans: 'Open Sans', sans-serif;
+  --raleway: 'Raleway', sans-serif;
+  --roboto: 'Roboto', sans-serif;
 }
 
 /* Reset Styles */
@@ -26,6 +35,10 @@ body, h1, h2, h3, h4, h5, h6, p, ul, li {
 }
 
 /* Base Styles */
+body {
+  background-color: var(--white);
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -57,3 +70,97 @@ input:focus {
 }
 
 /* Desktop Styles */
+/* Login Styles */
+.loginMain {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
+.loginMain aside {
+  background-color: var(--login-navy-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.loginMain aside img {
+  width: 60%;
+  margin-block-end: 3rem;
+}
+
+.loginMain aside p {
+  font-weight: 500;
+  font-family: var(--lato);
+  color: var(--white);
+}
+
+.loginMain section {
+  width: 35%;
+  height: 100%;
+  margin-inline: auto;
+  padding-block: 5rem;
+}
+
+.loginMain section nav {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  margin-block-end: 8rem;
+}
+
+.loginMain section nav p {
+  color: var(--login-navy-blue);
+  font-family: Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1.1rem;
+}
+
+.loginMain section .loginBody {
+  display: flex;
+  flex-direction: column;
+  color: var(--black);
+}
+
+.loginMain section .loginBody h1 {
+  font-weight: 600;
+  font-family: var(--open-sans);
+  font-size: 1.6rem;
+  margin-block-end: 1rem;
+}
+
+.loginMain section .loginBody p {
+  font-family: var(--roboto);
+  font-size: 1rem;
+}
+
+.loginMain section .loginBody form {
+  display: flex;
+  flex-direction: column;
+  margin-block-start: 3.6rem;
+  gap: 3rem;
+}
+
+.loginMain section .loginBody form input {
+  border: none;
+  border-bottom: 2px solid hsla(0, 0%, 65%, 1);
+  font-family: var(--lato);
+  font-weight: 400;
+  font-size: 1.1rem;
+  height: 40px;
+  color: var(--font-dark-blue);
+}
+
+.loginMain section .loginBody form button {
+  border-radius: 5px;
+  border: none;
+  color: white;
+  padding-block: .8rem;
+  background-color: var(--login-navy-blue);
+  font-family: var(--raleway);
+  font-weight: 500;
+  font-size: 1.05rem;
+}
