--- a/src/index.css
+++ b/src/index.css
@@ -240,7 +240,7 @@ section.content header .headerWrap nav.topHeader {
   justify-content: space-between;
   align-items: center;
   margin-block: 1rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-family: var(--open-sans);
   font-weight: 600;
   color: var(--black);
@@ -429,7 +429,7 @@ main.wrapper .availableStock {
 main.wrapper .availableStock .stockHead {
   display: flex;
   align-items: center;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.1rem;
 }
 
@@ -476,4 +476,13 @@ main.notification .notification-preview {
 
 main.notification .notification-preview img {
   margin-inline-end: 1rem;
+}
+
+/* Employee Page */
+main.wrapper.employee {
+  margin-block: 3rem;
+}
+
+main.wrapper.employee .availableStock .stockDetails p:last-child {
+  color: var(--active-lite-blue);
 }
