--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,52 @@ input:focus {
   margin-inline: auto;
 }
 
+/* Loader Styles */
+.overwrap {
+  background-color: hsla(0, 1%, 39%, .7 );
+  z-index: 900;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stephLoader {
+  height: 60px;
+  background-color: var(--white);
+  padding-block-start: .6rem;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
+}
+
+.loadContainer {
+  height: 20px;
+  width: 100%;
+  background-color: #f0f0f0;
+  border-radius: 0px 0px 10px 10px;
+  overflow: hidden;
+}
+
+.blueLoader {
+  height: 100%;
+  background-color: #007bff;
+  width: 50%;
+  transition: width 0.3s ease-in-out;
+}
+
+.blueLoader.loading {
+  width: 100%;
+  transition: width 0.3s ease-in-out;
+}
+
 /* Desktop Styles */
 /* Login Styles */
 .loginMain {
