--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ input:focus {
   height: 100%;
   background-color: #007bff;
   width: 50%;
-  transition: width 0.3s ease-in-out;
+  transition: width 2.5s ease-in-out;
 }
 
 .loginMain {
@@ -154,6 +154,7 @@ input:focus {
   font-weight: 500;
   font-family: var(--lato);
   color: var(--white);
+  text-align: center;
 }
 
 .loginMain section {
