--- a/src/index.css
+++ b/src/index.css
@@ -601,3 +601,6 @@ main.wrapper.cashierSales .availableStock .stockDetails button {
   color: white;
   border-radius: 5px;
 }
+
+/* When Im not around */
+deuhduhd
