--- a/src/index.css
+++ b/src/index.css
@@ -603,4 +603,6 @@ main.wrapper.cashierSales .availableStock .stockDetails button {
 }
 
 /* When Im not around */
-deuhduhd
+.n.streak {
+  background: transparent;
+}
