--- a/src/index.css
+++ b/src/index.css
@@ -605,4 +605,5 @@ main.wrapper.cashierSales .availableStock .stockDetails button {
 /* When Im not around */
 .n.streak {
   background: transparent;
+  color: #007bff;
 }
