--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 :root {
   /* colors */
   /* Primary Colors */
-  --login-navy-blue: hsla(210, 100%, 20%, 1);
+  --login-navy-blue: hsl(210, 100%, 20%);
   --font-dark-blue: hsla(207, 43%, 16%, 1);
   --active-lite-blue: hsla(200, 100%, 70%, 1);
   --search-placeholder: hsla(248, 92%, 37%, 0.5);
@@ -575,7 +575,7 @@ main.receipt .receiptWrapper {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  padding: 1.5rem;
   font-size: .8rem;
 }
 
@@ -633,7 +633,7 @@ main.receipt .receiptWrapper {
   font-family: var(--open-sans);
   font-weight: 600;
   font-size: 0.9rem;
-  margin-block: .8rem;
+  margin-block: .5rem;
 }
 
 .receipt .recieptView button {
@@ -648,29 +648,37 @@ main.receipt .receiptWrapper {
 
 @media print {
   .recieptView {
-    width: 100%;
+    width: 80%;
     height: 100%;
-    text-align: center;
     border: unset;
-    background-color: var(--white);
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    font-size: 1rem;
+    padding: 3rem;
+    font-size: 2rem;
+    margin-inline: auto;
   }
 
-  .recieptView header h1 {
-    margin-block-end: .6rem;
-    text-transform: uppercase;
+  .recieptView section .topTable {
+    border-block-start: 2px dotted black;
+    margin-block-start: 1rem;
   }
-
-  .recieptView h2 {
+  
+  .recieptView section table tbody tr {
+    display: flex;
+    font-size: 2rem;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+    margin-block-end: 2rem;
+  }
+  
+  .recieptView section table tbody .tableFooter {
     border-block: 2px dotted black;
-    width: 100%;
-    margin-block: 1rem .5rem;
-    padding: 0.3rem;
+    padding-block-start: 2rem;
+    margin-block-end: 2rem;
   }
 }
 
