--- a/src/index.css
+++ b/src/index.css
@@ -682,7 +682,7 @@ main.receipt .receiptWrapper {
   }
 }
 
-/* Cashier pAges */
+/* Cashier pages */
 /* Sales */
 main.wrapper.cashierSales {
   margin-block: 3rem;
