--- a/src/index.css
+++ b/src/index.css
@@ -676,7 +676,7 @@ main.receipt .receiptWrapper {
   }
   
   .recieptView section table tbody .tableFooter {
-    border-block: 2px dotted black;
+    border-block: 2px dotted #000000;
     padding-block-start: 2rem;
     margin-block-end: 2rem;
   }
