--- a/src/index.css
+++ b/src/index.css
@@ -662,7 +662,7 @@ main.receipt .receiptWrapper {
   }
 
   .recieptView section .topTable {
-    border-block-start: 2px dotted black;
+    border-block-start: 2px dotted hsl(0, 0%, 0%);
     margin-block-start: 1rem;
   }
   
