--- a/src/index.css
+++ b/src/index.css
@@ -428,7 +428,7 @@ section.content header .headerWrap .bottomHeader.tree button {
 
 .popupForm form .formField .twoForms input, .twoForms select {
   margin-block: .5rem .6rem;
-  color: hwb(0 0% 100%);
+  color: rgb(0, 0, 0);
   border: none;
   width: 100%;
   border-radius: 5px;
